adjusted table to add CMHA number + cosmetic upgrades

--- a/starterhacks/startbootstrap-freelancer-gh-pages/index.html
+++ b/starterhacks/startbootstrap-freelancer-gh-pages/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>JAMML</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">JAMML</a>
-        <a href="#page-top">JAMML</a>
+        <a href="https://cmha.ca/about-cmha/contact-us"> CMHA: 1 800-471-1732</a>
         <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fas fa-bars"></i>
@@ -66,7 +66,7 @@
         <!--<img class="jamml" src="img/asset2.png" alt="">-->
         <script type="text/javascript">
           document.getElementById("jamml").onclick = function () {
-            location.href = "https://www.google.ca";
+            location.href = "jamml_page.html";
         };
         </script>
         <h1 class="main_header">Need someone to listen?</h1>
@@ -177,8 +177,9 @@
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p>
+            <p class="lead mb-0">University of Waterloo
+                200 University Ave W
+              <br>Waterloo, ON N2L 3G1</p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
@@ -211,7 +212,7 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
+            <h4 class="text-uppercase mb-4">Powered by Bootstrap</h4>
             <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
               <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
           </div>
@@ -221,7 +222,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
+        <small>Copyright &copy; JAMML 2019</small>
       </div>
     </div>
 
