--- a/starterhacks/startbootstrap-freelancer-gh-pages/jamml_page.html
+++ b/starterhacks/startbootstrap-freelancer-gh-pages/jamml_page.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>JAMML</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,7 +25,7 @@
     <link href="css/freelancer.min.css" rel="stylesheet">
     <link href="css/assets.css" rel="stylesheet">
     <!--Test JS script-->
-    <script src="js/test.js"></script>
+    <script src="js/bot.js"></script>
 
   </head>
 
@@ -42,7 +42,7 @@
         <h2 class="font-weight-light mb-0">Hello. How are you feeling?</h2>
       </div>
       <div class="center">
-        
+
     <form name ="engine">
     good: <input type="checkbox" name="good">
     <br>
@@ -110,8 +110,9 @@
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p>
+            <p class="lead mb-0">University of Waterloo
+                200 University Ave W
+              <br>Waterloo, ON N2L 3G1</p>
           </div>
           <div class="col-md-4 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
@@ -144,14 +145,13 @@
             </ul>
           </div>
           <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
+            <h4 class="text-uppercase mb-4">Powered by Bootstrap</h4>
             <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
               <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
           </div>
         </div>
       </div>
     </footer>
-
     <div class="copyright py-4 text-center text-white">
       <div class="container">
         <small>Copyright &copy; Your Website 2018</small>
