--- a/starterhacks/startbootstrap-freelancer-gh-pages/jamml_page.html
+++ b/starterhacks/startbootstrap-freelancer-gh-pages/jamml_page.html
@@ -30,7 +30,31 @@
   </head>
 
   <body id="page-top">
+      <!-- Navigation -->
+      <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
+        <div class="container">
+          <a class="navbar-brand js-scroll-trigger" href="#page-top">JAMML</a>
+          <a href="https://cmha.ca/about-cmha/contact-us"> CMHA: 1 800-471-1732</a>
+          <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item mx-0 mx-lg-1">
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">About Us</a>
+              </li>
+              <li class="nav-item mx-0 mx-lg-1">
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Get Involved</a>
+              </li>
+              <li class="nav-item mx-0 mx-lg-1">
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact Us</a>
 
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <!-- Header -->
 
     <header class="masthead bg-primary text-white text-center">
