--- a/starterhacks/startbootstrap-freelancer-gh-pages/index.html
+++ b/starterhacks/startbootstrap-freelancer-gh-pages/index.html
@@ -43,10 +43,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">About Us</a>
-            </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Get Involved</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">About</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact Us</a>
@@ -62,7 +59,7 @@
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
         <img class="dialog_box"src="img/asset10.png"/>
-        <button id="jamml" class="jamml_button"><img class="jamml" src="img/asset2.png"/></button>
+        <button id="jamml" class="jamml_button"><img class="jamml" src="img/asset/asset2.png"/></button>
         <!--<img class="jamml" src="img/asset2.png" alt="">-->
         <script type="text/javascript">
           document.getElementById("jamml").onclick = function () {
@@ -83,7 +80,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-              <img class="fortune_cookie" src="img/png/asset1.png" alt="">
+              <img class="fortune_cookie" src="img/asset/asset1.png" alt="">
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -93,11 +90,6 @@
           </div>
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fas fa-search-plus fa-3x"></i>
-                </div>
-              </div>
               <img class="grey_balloon" src="img/png/asset4.png" alt="">
             </a>
           </div>
@@ -246,7 +238,7 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Fortune Cookie</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/png/asset7.png" alt="">
+              <img class="img-fluid mb-5" src="img/asset/asset7.png" alt="">
               <p id="fortune1" class="mb-5"></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
@@ -266,13 +258,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
+              <h2 class="text-secondary text-uppercase mb-0">POOF!</h2>
               <hr class="star-dark mb-5">
               <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
-              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+              <p class="mb-5">Want to speak to Kid's Help Line?<a href="https://kidshelpphone.ca/"> Click here!</a></p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close Project</a>
+                Close</a>
             </div>
           </div>
         </div>
