js update, final

--- a/starterhacks/startbootstrap-freelancer-gh-pages/bad.html
+++ b/starterhacks/startbootstrap-freelancer-gh-pages/bad.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>JAMML</title>
+    <title>Freelancer - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -25,94 +25,51 @@
     <link href="css/freelancer.min.css" rel="stylesheet">
     <link href="css/assets.css" rel="stylesheet">
     <!--Test JS script-->
-    <script src="js/clickables.js"></script>
+    <script src="js/bot.js"></script>
 
   </head>
 
   <body id="page-top">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">JAMML</a>
-        <a href="https://cmha.ca/about-cmha/contact-us"> CMHA: 1 800-471-1732</a>
-        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact Us</a>
+ <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="index.html">JAMML</a>
+      <a href="https://cmha.ca/about-cmha/contact-us"> CMHA: 1 800-471-1732</a>
+      <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">About Us</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Get Involved</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact Us</a>
 
-            </li>
-          </ul>
-        </div>
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
 
     <!-- Header -->
 
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="dialog_box"src="img/asset10.png"/>
-        <button id="jamml" class="jamml_button"><img class="jamml" src="img/asset/asset2.png"/></button>
         <!--<img class="jamml" src="img/asset2.png" alt="">-->
         <script type="text/javascript">
-          document.getElementById("jamml").onclick = function () {
-            location.href = "jamml_page.html";
-        };
         </script>
-        <h1 class="main_header">Need someone to listen?</h1>
+        <img class="img-fluid mb-5" width="200" height="100" src="img/asset/asset2.png" alt="">
+        <h1>Please give us a call at 1 800-471-1732</h1>
         <br></br>
-        <h2 class="font-weight-light mb-0">Click on JAMML to start a conversation!</h2>
       </div>
+      <div class="center">
     </header>
-
-    <!-- Portfolio Grid Section -->
-    <section class="portfolio" id="portfolio">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Click on something!</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-              <img class="fortune_cookie" src="img/asset/asset1.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-              <img class="img-fluid" src="img/png/asset3.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-              <img class="grey_balloon" src="img/png/asset4.png" alt="">
-            </a>
-          </div>
-
-    </section>
-
-    <!-- About Section -->
-    <section class="bg-primary text-white mb-0" id="about">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-white">About</h2>
-        <br></br>
-        <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p class="lead">JAMML is a prompt-response chatbot that helps you in your time of distress. Click on JAMML to start a conversation. JAMML is here to listen.</p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead">Your mental health is extremely important, regardless of what stage of life you are in. Created by students at Starterhacks 2019, JAMML is meant to be a listening ear in a disruptive world.</p>
-          </div>
-        </div>
-          </a>
-        </div>
-      </div>
-    </section>
 
     <!-- Contact Section -->
     <section id="contact">
@@ -165,56 +122,57 @@
 
     <!-- Footer -->
     <footer class="footer text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">University of Waterloo
-                200 University Ave W
-              <br>Waterloo, ON N2L 3G1</p>
-          </div>
-          <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
-            <ul class="list-inline mb-0">
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-google-plus-g"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-linkedin-in"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-dribbble"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">Powered by Bootstrap</h4>
-            <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 mb-5 mb-lg-0">
+              <h4 class="text-uppercase mb-4">Location</h4>
+              <p class="lead mb-0">University of Waterloo
+                  200 University Ave W
+                <br>Waterloo, ON N2L 3G1</p>
+            </div>
+            <div class="col-md-4 mb-5 mb-lg-0">
+              <h4 class="text-uppercase mb-4">Around the Web</h4>
+              <ul class="list-inline mb-0">
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-google-plus-g"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-twitter"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-linkedin-in"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-dribbble"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <h4 class="text-uppercase mb-4">Powered by Bootstrap</h4>
+              <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
+                <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; JAMML 2019</small>
+        <small>Copyright &copy; Your Website 2018</small>
       </div>
     </div>
 
@@ -238,8 +196,10 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Fortune Cookie</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/asset/asset7.png" alt="">
+              <img class="img-fluid mb-5" src="img/png/asset7.png" alt="">
               <p id="fortune1" class="mb-5"></p>
+                <script> src="js/test.js"</script>
+
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -258,13 +218,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">More Resources!</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/asset/asset14.png" alt="">
-              <p class="mb-5">Want to speak to Kid's Help Line?<a href="https://kidshelpphone.ca/"> Click here!</a></p>
+              <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
+              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close</a>
+                Close Project</a>
             </div>
           </div>
         </div>
