--- a/starterhacks/jamml_page.html
+++ b/starterhacks/jamml_page.html
@@ -25,94 +25,57 @@
     <link href="css/freelancer.min.css" rel="stylesheet">
     <link href="css/assets.css" rel="stylesheet">
     <!--Test JS script-->
-    <script src="js/clickables.js"></script>
+    <script src="js/bot.js"></script>
 
   </head>
 
   <body id="page-top">
+      <!-- Navigation -->
+      <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
+        <div class="container">
+          <a class="navbar-brand js-scroll-trigger" href="index.html">JAMML</a>
+          <a href="https://cmha.ca/about-cmha/contact-us"> CMHA: 1 800-471-1732</a>
+          <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            Menu
+            <i class="fas fa-bars"></i>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item mx-0 mx-lg-1">
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">About</a>
+              </li>
+              </li>
+              <li class="nav-item mx-0 mx-lg-1">
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact Us</a>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">JAMML</a>
-        <a href="https://cmha.ca/about-cmha/contact-us"> CMHA: 1 800-471-1732</a>
-        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fas fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
-            </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact Us</a>
-
-            </li>
-          </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-
+      </nav>
     <!-- Header -->
 
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="dialog_box"src="img/asset10.png"/>
-        <button id="jamml" class="jamml_button"><img class="jamml" src="img/asset/asset2.png"/></button>
         <!--<img class="jamml" src="img/asset2.png" alt="">-->
         <script type="text/javascript">
-          document.getElementById("jamml").onclick = function () {
-            location.href = "jamml_page.html";
-        };
         </script>
-        <h1 class="main_header">Need someone to listen?</h1>
-        <br></br>
-        <h2 class="font-weight-light mb-0">Click on JAMML to start a conversation!</h2>
+
+        <h2 class="font-weight-light mb-0">Hello. How are you feeling?</h2>
       </div>
+      <div class="center">
+
+    <form name ="engine">
+    good: <input type="checkbox" name="good">
+    <br>
+    bad:  <input type="checkbox" name="bad">
+    <br>
+    <input class="size"type="button" value="submit" onclick="validator()">
+    </form>
+    <p class="center"id="choice">click </p>
+    <a href="https://www.camh.ca/en/driving-change/mental-health-is-health?gclid=EAIaIQobChMIprjLmfXq3wIVgxh9Ch2A1QnREAAYASAAEgJ_FfD_BwE">here</a>
+        </div>
     </header>
-
-    <!-- Portfolio Grid Section -->
-    <section class="portfolio" id="portfolio">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Click on something!</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-              <img class="fortune_cookie" src="img/asset/asset1.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-              <img class="img-fluid" src="img/png/asset3.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-              <img class="grey_balloon" src="img/png/asset4.png" alt="">
-            </a>
-          </div>
-
-    </section>
-
-    <!-- About Section -->
-    <section class="bg-primary text-white mb-0" id="about">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-white">About</h2>
-        <br></br>
-        <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p class="lead">JAMML is a prompt-response chatbot that helps you in your time of distress. Click on JAMML to start a conversation. JAMML is here to listen.</p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead">Your mental health is extremely important, regardless of what stage of life you are in. Created by students at Starterhacks 2019, JAMML is meant to be a listening ear in a disruptive world.</p>
-          </div>
-        </div>
-          </a>
-        </div>
-      </div>
-    </section>
 
     <!-- Contact Section -->
     <section id="contact">
@@ -211,7 +174,6 @@
         </div>
       </div>
     </footer>
-
     <div class="copyright py-4 text-center text-white">
       <div class="container">
         <small>Copyright &copy; JAMML 2019</small>
@@ -238,8 +200,10 @@
             <div class="col-lg-8 mx-auto">
               <h2 class="text-secondary text-uppercase mb-0">Fortune Cookie</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/asset/asset7.png" alt="">
+              <img class="img-fluid mb-5" src="img/png/asset7.png" alt="">
               <p id="fortune1" class="mb-5"></p>
+                <script> src="js/test.js"</script>
+
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
                 Close</a>
@@ -258,13 +222,13 @@
         <div class="container text-center">
           <div class="row">
             <div class="col-lg-8 mx-auto">
-              <h2 class="text-secondary text-uppercase mb-0">More Resources!</h2>
+              <h2 class="text-secondary text-uppercase mb-0">Project Name</h2>
               <hr class="star-dark mb-5">
-              <img class="img-fluid mb-5" src="img/asset/asset14.png" alt="">
-              <p class="mb-5">Want to speak to Kid's Help Line?<a href="https://kidshelpphone.ca/"> Click here!</a></p>
+              <img class="img-fluid mb-5" src="img/portfolio/cake.png" alt="">
+              <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
               <a class="btn btn-primary btn-lg rounded-pill portfolio-modal-dismiss" href="#">
                 <i class="fa fa-close"></i>
-                Close</a>
+                Close Project</a>
             </div>
           </div>
         </div>
