--- a/starterhacks/startbootstrap-freelancer-gh-pages/jamml_page.html
+++ b/starterhacks/startbootstrap-freelancer-gh-pages/jamml_page.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>JAMML</title>
+    <title>Freelancer - Start Bootstrap Theme</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,8 +30,9 @@
   </head>
 
   <body id="page-top">
-      <!-- Navigation -->
-      <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
+
+     <!-- Navigation -->
+     <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
         <div class="container">
           <a class="navbar-brand js-scroll-trigger" href="index.html">JAMML</a>
           <a href="https://cmha.ca/about-cmha/contact-us"> CMHA: 1 800-471-1732</a>
@@ -42,8 +43,10 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">About</a>
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">About Us</a>
               </li>
+              <li class="nav-item mx-0 mx-lg-1">
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">Get Involved</a>
               </li>
               <li class="nav-item mx-0 mx-lg-1">
                 <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact Us</a>
@@ -53,6 +56,7 @@
           </div>
         </div>
       </nav>
+
     <!-- Header -->
 
     <header class="masthead bg-primary text-white text-center">
@@ -60,20 +64,24 @@
         <!--<img class="jamml" src="img/asset2.png" alt="">-->
         <script type="text/javascript">
         </script>
-
-        <h2 class="font-weight-light mb-0">Hello. How are you feeling?</h2>
+        <img class="img-fluid mb-5" width="200" height="100" src="img/asset/asset2.png" alt="">
+        <p style="font-size: x-large" class="font-weight-light mb-0">Hi there, how are you feeling today?</p>
+        <br></br>
       </div>
       <div class="center">
 
     <form name ="engine">
-    good: <input type="checkbox" name="good">
+    I am feeling ok but I would love to chat: <input type="checkbox" name="good">
     <br>
-    bad:  <input type="checkbox" name="bad">
+    I'm frustrated:  <input type="checkbox" name="frust">
+    <br>
+    Scared:  <input type="checkbox" name="scared">
+    <br>
+    I'm thinking about suicide:  <input type="checkbox" name="bad">
     <br>
     <input class="size"type="button" value="submit" onclick="validator()">
     </form>
-    <p class="center"id="choice">click </p>
-    <a href="https://www.camh.ca/en/driving-change/mental-health-is-health?gclid=EAIaIQobChMIprjLmfXq3wIVgxh9Ch2A1QnREAAYASAAEgJ_FfD_BwE">here</a>
+    <p class="center"id="choice"></p>
         </div>
     </header>
 
@@ -128,55 +136,56 @@
 
     <!-- Footer -->
     <footer class="footer text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">University of Waterloo
-                200 University Ave W
-              <br>Waterloo, ON N2L 3G1</p>
-          </div>
-          <div class="col-md-4 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Around the Web</h4>
-            <ul class="list-inline mb-0">
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-google-plus-g"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-linkedin-in"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fab fa-fw fa-dribbble"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">Powered by Bootstrap</h4>
-            <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 mb-5 mb-lg-0">
+              <h4 class="text-uppercase mb-4">Location</h4>
+              <p class="lead mb-0">University of Waterloo
+                  200 University Ave W
+                <br>Waterloo, ON N2L 3G1</p>
+            </div>
+            <div class="col-md-4 mb-5 mb-lg-0">
+              <h4 class="text-uppercase mb-4">Around the Web</h4>
+              <ul class="list-inline mb-0">
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-facebook-f"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-google-plus-g"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-twitter"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-linkedin-in"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                    <i class="fab fa-fw fa-dribbble"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <h4 class="text-uppercase mb-4">Powered by Bootstrap</h4>
+              <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
+                <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+            </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; JAMML 2019</small>
+        <small>Copyright &copy; Your Website 2018</small>
       </div>
     </div>
 
