--- a/starterhacks/startbootstrap-freelancer-gh-pages/index.html
+++ b/starterhacks/startbootstrap-freelancer-gh-pages/index.html
@@ -77,7 +77,7 @@
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Click on something!</h2>
         <hr class="star-dark mb-5">
-        <div class="row">
+        <div class="row_pad">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
               <img class="fortune_cookie" src="img/asset/asset1.png" alt="">
@@ -93,6 +93,9 @@
               <img class="grey_balloon" src="img/png/asset4.png" alt="">
             </a>
           </div>
+         </div>
+        </div>
+
 
     </section>
 
